Finishing OpenAPI docs
